# GateCraft

./: .gitignore  LICENSE  README.md  docker-compose.yml
mysql/data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql/data/#innodb_redo/: #ib_redo9
mysql/data/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  (+3 more)
mysql/init/: schema.sql
services/access-service/: Dockerfile  pyproject.toml
services/access-service/app/: container.py  main.py  main_admin.py  main_player.py
services/access-service/app/adapters/rcon/: client.py  service.py
services/access-service/app/adapters/storage/: mysql_repo.py
services/access-service/app/adapters/telegram/: notifier.py
services/access-service/app/bots/admin/: router.py
services/access-service/app/bots/admin/handlers/: approve.py  pending.py  reject.py  start.py  whitelist.py
services/access-service/app/bots/admin/ui/: keyboards.py  messages.py
services/access-service/app/bots/player/: router.py
services/access-service/app/bots/player/handlers/: dbdebug.py  online.py  register.py  start.py  status.py
services/access-service/app/bots/player/middlewares/: rate_limit.py
services/access-service/app/bots/player/ui/: keyboards.py  messages.py
services/access-service/app/config/: logging.py  logging.yaml  settings.py
services/access-service/app/domain/: access_service.py
services/access-service/app/utils/: validators.py
(+120 files in other folders)
