[tool.poetry]
name = "gatecraft-access-service"
version = "0.1.0"
description = "GateCraft access-service: player/admin Telegram bots + MySQL + RCON"
authors = ["GateCraft"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

aiogram = "^3.15.0"
aiomysql = "^0.2.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
